# FastAPI-Blog-Project

./: .env  .gitignore  auth.py  config.py  database.py  email_utils.py  image_utils.py  main.py  models.py  populate_db.py  pyproject.toml  schemas.py
routers/: posts.py  users.py
static/js/: auth.js  utils.js
templates/: account.html  base.html  error.html  forgot_password.html  home.html  login.html  post.html  register.html  reset_password.html  user_posts.html
templates/email/: password_reset.html
