[project]
name = "blog-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.1",
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.0",
    "pillow>=12.2.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.49",
]
